fixed extra padding

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -230,10 +230,18 @@ body#index {
   }
 }
 
-@media (max-width: 460px) {
+@media (max-width: 460px) and (min-width: 320px) {
   #pagehead {
     a {
       font-size: 16px !important;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  #pagehead {
+    a {
+      font-size: 12px !important;
     }
   }
 }
@@ -278,6 +286,7 @@ body#issues {
     }
   }
 }
+
 body#about {
   .content .row {
     padding: 20px 0;
@@ -306,6 +315,7 @@ body#about {
     }
   }
 }
+
 body#htv {
   .content .row {
     padding: 20px 0;
